Changed the default color of the highlight for EditSectionHiliteLink extension
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@50290 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/EditSectionHiliteLink.css
+++ b/EditSectionHiliteLink.css
@@ -1,5 +1,5 @@
 /* CSS StyleSheet for EditSectionHiliteLink extensions */
 
 div.edit_section_hilite {
-		background-color:Lavender;
+		background-color:#B0E0E6;
 }
