Added behavior to buttons and restructured how buttons are created.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@51387 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Toolbar/Toolbar.css
+++ b/Toolbar/Toolbar.css
@@ -24,3 +24,16 @@ div#editing-toolbar > div.group > div.tool {
 	margin: 2px;
 	cursor: pointer;
 }
+
+div#editing-toolbar > div.group > div.tool > div.tooltip {
+	display: none;
+	position: absolute;
+	padding-top: 0.125em;
+	padding-bottom: 0.125em;
+	padding-left: 0.25em;
+	padding-right: 0.25em;
+	margin-top: 22px;
+	margin-left: 4px;
+	border: solid 1px #FFFFAA;
+	background-color: #FFFFDD;
+}
