float left secondary filter checkboxes, add clearfix elements after labels
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@108570 fd97a983-eea8-4f9b-9b74-e50290b97401

--- a/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
+++ b/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
@@ -36,6 +36,9 @@
 	border: none;
 }
 
+.fbd-filters-check {
+	float: left;
+}
 .fbd-filters-label {
 	display: inline;
 	margin: 0.5em 0 0 0;
@@ -123,7 +126,7 @@
 .fbd-tooltip-overlay-wrap {
 	width: 285px;
 	position: absolute;
-	left: 7em;
+	left: 1em;
 	top: 5.25em;
 	background: #ff9933;
 	padding: 2px;
@@ -487,4 +490,7 @@
 .red-bold {
 	font-weight: bold;
 	color: #CC0000;
+}
+.fbd-clearfix {
+	clear: both;
 }
