--- a/resources/ext.webfonts.preview.css
+++ b/resources/ext.webfonts.preview.css
@@ -17,7 +17,8 @@ div#webfonts-preview-area {
 	-webkit-border-radius: 0 0 4px 4px;
 	-moz-border-radius: 0 0 4px 4px;
 	text-align: left;
-	padding: 5px;
+	padding: 10px 5px;
+	line-height: 1.5em;
 	overflow: auto;
 }
 
