--- a/css/debug.css
+++ b/css/debug.css
@@ -1,19 +1,23 @@
 #soundmanager-debug {
- position:absolute;
  position:fixed;
- *position:absolute;
- bottom:10px;
- right:10px;
- width:50em;
- height:18em;
+ _position:absolute; /* IE <7 */
+ bottom:1em;
+ right:1em;
+ width:38em;
+ height:30em;
  overflow:auto;
- background:#fff;
+ padding:0px;
  margin:1em;
- padding:1em;
- border:1px solid #999;
- font-family:"lucida console",verdana,tahoma,"sans serif";
- font-size:x-small;
- line-height:1.5em;
+ font-family:monaco,"VT-100","lucida console",courier,system;
  opacity:0.9;
- filter:alpha(opacity=90);
+ color:#333;
+ border:1px solid #ccddee;
+ border-radius:3px;
+ background:#f3f9ff;
+}
+
+#soundmanager-debug div {
+ font-size:x-small;
+ padding:0.2em;
+ margin:0px;
 }
